France Flavor + Map
Fixed France Flavor mod related bugs and added the map folder.

--- a/localisation/francefactions_l_english.yml
+++ b/localisation/francefactions_l_english.yml
@@ -242,7 +242,7 @@ l_english:
  fflavor.1.optb: "Let's not make the Estates unhappy."
  fflavor.1.optc: "I don't want the Taille to ever come back."
  fflavor.2.title: "Anne de Beaujeu's regency"
- fflavor.2.desc: "Anne de Beaujeu, daughter of Louis XI of France, was regent for his brother Charles VIII in 1483, even after Charles turned 15, due to his poor health. In 1491, however, she married his brother to Duchess Anne of Britanny to annex the Duchy. While he fought wars in Italy, she'd be the regent again."
+ fflavor.2.desc: "Anne de Beaujeu, daughter of Louis XI of France, was regent for her brother Charles VIII in 1483, even after Charles turned 15, due to his poor health. In 1491, however, she married his brother to Duchess Anne of Britanny to annex the Duchy. While he fought wars in Italy, she'd be the regent again."
  fflavor.2.opta: "Well, regency's over."
  fflavor.2.optb: "Well, since she kept even after he was 15..."
  fflavor_2_tooltip: "$HEIR$ assumes the throne, §YFrance§! inherits §YAuvergne§!."
@@ -251,7 +251,7 @@ l_english:
  fflavor.3.opta: "Issue it"
  fflavor.3.optb: "Do we really need another tax?"
  fflavor.4.title: "The French Wedding"
- fflavor.4.desc: "In 1491, Anne de Beaujeu, regent of France, married his brother, King Charles VIII of France to Duchess Anne of Britanny, which later married the next King, Louis XII. The union was arranged to make Britanny a vassal, as they had problems with them back in the regency because of the former Dukes and Louis XII."
+ fflavor.4.desc: "In 1491, Anne de Beaujeu, regent of France, married her brother, King Charles VIII of France to Duchess Anne of Britanny, which later married the next King, Louis XII. The union was arranged to make Britanny a vassal, as they had problems with them back in the regency because of the former Dukes and Louis XII."
  fflavor.4.opta: "Here comes the bride!"
  fflavor.4.optb: "Nah, I'll pass."
  fflavor.5.title: "Louis II of Órleans"
@@ -287,3 +287,12 @@ l_english:
  fflavor.14.t: "Philippe's regency"
  fflavor.14.d: "Philippe II, Duke of Orleans, was Louis XIV's cousin, he was given the Regency's care from Louis XIV himself. Philippe opposed Louis XIV's censorship, letting books which were banned from Louis' time to be reprinted. During his time, people have intrigued to transfer the regency from Philippe d'Orleans to Filipe V of Spain, the plot known as Cellamare Conspirancy, the plot, however, was discovered and its participants were exiled. A later conspirancy would revive the plan, the Pontcallec Conspirancy, which was a ta revolt. Philippe saw the beggining and the end of the War of the Quadruple Alliance, worsening the spanish relations, which would only be totally restored when Louis XV's son, Louis, which didn't turn into be King of France, as Louis XV outlived him, would be married to Maria Teresa Rafaela of Spain, which didn't gave any children, as she died 20 years old. Later on the King's majority, Philippe would become Prime Minister of France until his death."
  fflavor.14.opta: "Well, regency's over."
+ fflavor.15.t: "Habsburg France?"
+ fflavor.15.d: "Since the passing of our beloved Louis de Bourbon, the French throne has been endangered by the Habsburgs, since there's no Bourbon heir to the throne anymore and Anne von Habsburg is the regent."
+ fflavor.15.opta: "Bring a Bourbon to the Court already!"
+ fflavor.15.optb: "The age of the Habsburgs on France's throne has arrived!"
+ fflavor.16.t: "France's Heir"
+ fflavor.16.d: "Since the passing of our beloved heir, France has no de Valois heir to the throne."
+ fflavor.16.opta: "Bring Henri to Auvergne, he'll make a fine heir to France."
+ fflavor.16.optb: "I'm out of heirs, maybe a distant cousin?"
+ fflavor.16.optc: "de' Medici France has a nice sound to it, isn't it?"
